helloapp/base/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
  namespace: hello
spec:
  host: hello.apps.ocp4.baretest.ml
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: hello
    weight: 100
  wildcardPolicy: None
